--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
         </p>
 
         <div class="flex flex-col sm:flex-row justify-center gap-6">
-            <a href="#" class="cta-button bg-indigo-600 hover:bg-indigo-500 text-white px-10 py-5 rounded-2xl font-semibold transition-all">
+            <a href="services.html" class="cta-button bg-indigo-600 hover:bg-indigo-500 text-white px-10 py-5 rounded-2xl font-semibold transition-all">
                 View Signature Collection
             </a>
-            <a href="#" class="premium-card px-10 py-5 rounded-2xl font-semibold flex items-center justify-center gap-3">
+            <a href="https://wa.me/918087220081" class="premium-card px-10 py-5 rounded-2xl font-semibold flex items-center justify-center gap-3">
                 <i class="fa-brands fa-whatsapp text-green-500"></i> Consult an Expert
             </a>
         </div>
@@ -231,7 +231,7 @@
             <h2 class="serif text-4xl md:text-5xl mb-4 italic text-white">Curated Services</h2>
             <p class="text-gray-500 border-l-2 border-indigo-500/30 pl-6">We specialize in tactile storytelling. Whether it's the weight of a business card or the texture of a luxury box, we ensure your brand is felt.</p>
         </div>
-        <a href="#" class="text-indigo-400 font-medium hover:text-indigo-300 transition group">
+        <a href="services.html" class="text-indigo-400 font-medium hover:text-indigo-300 transition group">
             Browse All Services <i class="fa-solid fa-arrow-right-long ml-2 group-hover:translate-x-2 transition-transform"></i>
         </a>
     </div>
