--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <header class="glass-header sticky top-0 z-[100]">
     <nav class="container mx-auto px-6 py-5 flex justify-between items-center">
-        <a href="index.html" class="group flex items-center space-x-4">
+        <a href="about.html" class="group flex items-center space-x-4">
             <div class="relative">
                 <div class="absolute -inset-1 bg-gradient-to-r from-indigo-600 to-blue-600 rounded-lg blur opacity-25 group-hover:opacity-100 transition duration-1000"></div>
                 <div class="relative w-11 h-11 bg-slate-900 rounded-lg flex items-center justify-center border border-white/10 text-white font-bold text-xl">SS</div>
