--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <p class="text-[10px] font-bold text-indigo-400 uppercase tracking-widest mb-3">Commercial</p>
                         <a href="business-cards.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300">Business Cards</a>
                         <a href="brochures.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300">Brochures</a>
-                        <a href="packaging.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300">Bespoke Packaging</a>
+                        <a href="packaging.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300"> Packaging</a>
                         <a href="labels.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300">Labels</a>
                     </div>
                     <div class="space-y-1">
