--- a/office-binding.html
+++ b/office-binding.html
@@ -81,25 +81,72 @@
 </head>
 <body class="grid-bg">
 
-<header class="sticky top-0 z-[100] bg-slate-950/80 backdrop-blur-xl border-b border-white/5">
-    <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-        <a href="index.html" class="flex items-center space-x-3">
-            <div class="w-10 h-10 bg-emerald-500 rounded-xl flex items-center justify-center text-black font-black">SS</div>
+<header class="glass-header sticky top-0 z-[100]">
+    <nav class="container mx-auto px-6 py-5 flex justify-between items-center">
+        <a href="about.html" class="group flex items-center space-x-4">
+            <div class="relative">
+                <div class="absolute -inset-1 bg-gradient-to-r from-indigo-600 to-blue-600 rounded-lg blur opacity-25 group-hover:opacity-100 transition duration-1000"></div>
+                <div class="relative w-11 h-11 bg-slate-900 rounded-lg flex items-center justify-center border border-white/10 text-white font-bold text-xl">SS</div>
+            </div>
             <div>
-                <h1 class="text-lg text-white font-bold leading-none outfit">SHWET SHIVA</h1>
-                <p class="text-[9px] text-emerald-500 uppercase tracking-[0.3em] mt-1">Corporate Division</p>
+                <span class="block text-xl font-medium tracking-tight text-white leading-none uppercase">Shwet Shiva</span>
+                <span class="text-[10px] text-indigo-400 uppercase tracking-[0.3em]">Studios</span>
             </div>
         </a>
 
-        <div class="hidden md:flex space-x-10 text-xs font-bold uppercase tracking-widest text-gray-400">
-            <a href="index.html" class="hover:text-white transition">Home</a>
-            <a href="labels.html" class="hover:text-white transition">Labels</a>
-            <a href="office-binding.html" class="text-white border-b-2 border-emerald-500 pb-1">Office Binding</a>
-            <a href="contact.html" class="hover:text-white transition">Contact</a>
+        <div class="hidden md:flex items-center space-x-10">
+            <a href="index.html" class="text-sm font-medium text-gray-400 hover:text-white transition-colors">Home</a>
+            
+            <div class="relative group">
+                <button class="text-sm font-medium text-gray-400 group-hover:text-white flex items-center gap-1 transition-colors py-2">
+                    Products <i class="fa-solid fa-chevron-down text-[10px] ml-1 opacity-50"></i>
+                </button>
+                <div class="absolute invisible group-hover:visible opacity-0 group-hover:opacity-100 transition-all duration-300 top-full -left-20 bg-[#0a0f18]/95 backdrop-blur-xl border border-white/10 shadow-2xl rounded-2xl w-[450px] p-6 mt-2 grid grid-cols-2 gap-4">
+                    <div class="space-y-1">
+                        <p class="text-[10px] font-bold text-indigo-400 uppercase tracking-widest mb-3">Commercial</p>
+                        <a href="business-cards.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300">Business Cards</a>
+                        <a href="brochures.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300">Brochures</a>
+                        <a href="packaging.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300"> Packaging</a>
+                        <a href="labels.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300">Labels</a>
+                    </div>
+                    <div class="space-y-1">
+                        <p class="text-[10px] font-bold text-indigo-400 uppercase tracking-widest mb-3">Specialty</p>
+                        <a href="wedding-cards.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300">Wedding Cards</a>
+                        <a href="invitation-cards.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300">Invitations</a>
+                        <a href="banners.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300">Banners</a>
+                        <a href="office-binding.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-sm text-gray-300">Binding</a>
+                    </div>
+                </div>
+            </div>
+
+            <a href="services.html" class="text-sm font-medium text-gray-400 hover:text-white transition-colors">Services</a>
+            <a href="contact.html" class="text-sm font-medium text-gray-400 hover:text-white transition-colors">Contact</a>
+            <a href="https://wa.me/918087220081" class="cta-button bg-white text-black px-6 py-2.5 rounded-full text-sm font-semibold">
+                Get a Quote
+            </a>
         </div>
 
-        <a href="https://wa.me/918087220081" class="hidden md:block bg-emerald-500 text-black px-6 py-2 rounded-full text-xs font-black hover:bg-white transition">GET A QUOTE</a>
+        <button id="mobileBtn" class="md:hidden text-white p-2">
+            <i class="fas fa-bars text-xl" id="menuIcon"></i>
+        </button>
     </nav>
+
+    <div id="mobileMenu" class="hidden md:hidden bg-[#05070a] px-8 py-10 space-y-8 absolute w-full left-0 shadow-2xl h-screen overflow-y-auto">
+        <div class="space-y-6">
+            <a href="index.html" class="block text-2xl font-semibold text-white">Home</a>
+            <a href="services.html" class="block text-2xl font-semibold text-white">Services</a>
+            <div class="pt-4 space-y-4">
+                <p class="text-[10px] text-indigo-500 uppercase tracking-[0.2em] font-bold">Catalog</p>
+                <div class="grid grid-cols-2 gap-4">
+                    <a href="business-cards.html" class="text-gray-400 text-sm">Business Cards</a>
+                    <a href="packaging.html" class="text-gray-400 text-sm">Packaging</a>
+                    <a href="wedding-cards.html" class="text-gray-400 text-sm">Wedding Cards</a>
+                    <a href="labels.html" class="text-gray-400 text-sm">Labels</a>
+                </div>
+            </div>
+        </div>
+        <a href="https://wa.me/918087220081" class="block w-full bg-indigo-600 text-white text-center py-4 rounded-2xl font-bold">WhatsApp Quote</a>
+    </div>
 </header>
 
 <section class="py-24 px-6 text-center relative overflow-hidden">
