--- a/brochures.html
+++ b/brochures.html
@@ -262,7 +262,7 @@
         <h2 class="serif text-4xl text-center mb-16 italic">Material Showcase</h2>
         <div class="grid md:grid-cols-3 gap-10">
             <div class="glass-card group overflow-hidden rounded-[32px]">
-                <img src="https://images.unsplash.com/photo-1586075010620-2274092b604e?auto=format&fit=crop&q=80&w=800" class="w-full h-56 object-cover grayscale group-hover:grayscale-0 transition duration-700">
+                <img src="https://picsum.photos/600/400?tri-fold"?auto=format&fit=crop&q=80&w=800" class="w-full h-56 object-cover grayscale group-hover:grayscale-0 transition duration-700">
                 <div class="p-8">
                     <h3 class="font-bold text-lg mb-2">Corporate Tri-Folds</h3>
                     <p class="text-gray-500 text-sm leading-relaxed">6 panels of organized data. Ideal for real estate and healthcare services.</p>
