--- a/brochures.html
+++ b/brochures.html
@@ -276,7 +276,7 @@
                 </div>
             </div>
             <div class="glass-card group overflow-hidden rounded-[32px]">
-                <img src="https://images.unsplash.com/photo-1562654508-4c8274f1d674?auto=format&fit=crop&q=80&w=800" class="w-full h-56 object-cover grayscale group-hover:grayscale-0 transition duration-700">
+                <img src="https://picsum.photos/600/400?flyer?auto=format&fit=crop&q=80&w=800" class="w-full h-56 object-cover grayscale group-hover:grayscale-0 transition duration-700">
                 <div class="p-8">
                     <h3 class="font-bold text-lg mb-2">Promotional Flyers</h3>
                     <p class="text-gray-500 text-sm leading-relaxed">High-impact single sheets designed for rapid mass engagement.</p>
