--- a/business-cards.html
+++ b/business-cards.html
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2">
-                    <img src="https://images.unsplash.com/photo-1598124146163-36819847286d?auto=format&fit=crop&q=80&w=800" class="rounded-[32px] shadow-2xl opacity-90" alt="Texture">
+                    <img src="https://a.mktgcdn.com/p/RjuC4zQOj2laPfr2OoCoYbIz_sP9d7w0w3RSmyKJXpM/960x960.jpg?auto=format&fit=crop&q=80&w=800" class="rounded-[32px] shadow-2xl opacity-90" alt="Texture">
                 </div>
             </div>
         </div>
