--- a/packaging.html
+++ b/packaging.html
@@ -151,7 +151,7 @@
             
             <div class="glass-card group p-8">
                 <div class="rounded-2xl overflow-hidden mb-8 aspect-square relative bg-white/5">
-                    <img src="https://images.unsplash.com/photo-1595079676339-1534801ad6cf?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-80">
+                    <img src="https://media.istockphoto.com/id/1058767914/photo/cartboard-boxes.jpg?s=612x612&w=0&k=20&c=OuP9CjhmJdJEG3FxTF-2Ch4tdcIN4zLBuHoiNBAj_f8=?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-80">
                     <div class="absolute top-4 left-4"><span class="box-badge bg-black/50 backdrop-blur-md border-none">Heavy Duty</span></div>
                 </div>
                 <h3 class="outfit text-2xl font-bold mb-3 text-white">Corrugated Cartons</h3>
@@ -165,7 +165,7 @@
 
             <div class="glass-card group p-8 border-orange-500/20">
                 <div class="rounded-2xl overflow-hidden mb-8 aspect-square relative bg-white/5">
-                    <img src="https://images.unsplash.com/photo-1512485694743-9c9538b4e6e0?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-80">
+                    <img src="https://m.media-amazon.com/images/I/71LnXe6RFQL.jpg?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-80">
                     <div class="absolute top-4 left-4"><span class="box-badge bg-black/50 backdrop-blur-md border-none">Food Grade</span></div>
                 </div>
                 <h3 class="outfit text-2xl font-bold mb-3 text-white">Bakery & Takeaway</h3>
@@ -179,7 +179,7 @@
 
             <div class="glass-card group p-8">
                 <div class="rounded-2xl overflow-hidden mb-8 aspect-square relative bg-white/5">
-                    <img src="https://images.unsplash.com/photo-1605152276897-4f618f831968?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-80">
+                    <img src="https://www.shutterstock.com/image-photo/christmas-gift-box-decorative-cosmetics-600nw-2685281597.jpg?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-80">
                     <div class="absolute top-4 left-4"><span class="box-badge bg-black/50 backdrop-blur-md border-none">Luxury Retail</span></div>
                 </div>
                 <h3 class="outfit text-2xl font-bold mb-3 text-white">Gift & Cosmetic Boxes</h3>
