--- a/labels.html
+++ b/labels.html
@@ -173,7 +173,7 @@
             
             <div class="glass-card group p-8 rounded-[32px]">
                 <div class="rounded-2xl overflow-hidden mb-8 aspect-square relative">
-                    <img src="https://images.unsplash.com/photo-1610444643093-662584102206?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-90">
+                    <img src="https://cdn.shopify.com/s/files/1/0070/7032/articles/product-label-design_8a938c1d-2f22-47ea-b280-0f4845dbb3b8.jpg?v=1746372107?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-90">
                     <div class="absolute top-4 left-4 flex flex-col gap-2">
                         <span class="label-feature-pill bg-black/50 backdrop-blur-md">Waterproof</span>
                         <span class="label-feature-pill bg-black/50 backdrop-blur-md">Oil Resistant</span>
@@ -186,7 +186,7 @@
 
             <div class="glass-card group p-8 rounded-[32px]">
                 <div class="rounded-2xl overflow-hidden mb-8 aspect-square relative">
-                    <img src="https://images.unsplash.com/photo-1589118949245-7d38baf380d6?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-90">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVX843i6d0JFqcw87zQcujQdnjyeBmYZqcCA&s?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-90">
                     <div class="absolute top-4 left-4 flex flex-col gap-2">
                         <span class="label-feature-pill bg-black/50 backdrop-blur-md">Custom Shape</span>
                         <span class="label-feature-pill bg-black/50 backdrop-blur-md">Premium Vinyl</span>
@@ -199,7 +199,7 @@
 
             <div class="glass-card group p-8 rounded-[32px]">
                 <div class="rounded-2xl overflow-hidden mb-8 aspect-square relative">
-                    <img src="https://images.unsplash.com/photo-1589939705384-5185137a7f0f?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-90">
+                    <img src="https://m.media-amazon.com/images/I/71Foe1caNrL._UF894,1000_QL80_.jpg?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover group-hover:scale-110 transition duration-1000 opacity-90">
                     <div class="absolute top-4 left-4 flex flex-col gap-2">
                         <span class="label-feature-pill bg-black/50 backdrop-blur-md">Tamper Proof</span>
                         <span class="label-feature-pill bg-black/50 backdrop-blur-md">Bulk Pack</span>
